# onnxruntime-rs

./: README.md
onnxruntime/: Cargo.toml
onnxruntime-sys/: Cargo.toml  build.rs
onnxruntime-sys/examples/: c_api_sample.rs
onnxruntime-sys/src/: lib.rs
onnxruntime/examples/: sample.rs
onnxruntime/src/: error.rs  lib.rs  session.rs
