[package]
authors = ["Andrey Volkov <andrew.wolf.alex@gmail.com>"]
edition = "2021"
name = "onnxruntime-sys"
version = "0.0.4"

description = "Rust bindings for the C API of Microsoft's ONNX Runtime"
homepage = "https://github.com/infertech/onnxruntime-rs"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/infertech/onnxruntime-rs"

[dependencies]

[build-dependencies]
bindgen = { version = "0.62", optional = true }
ureq = "2.1"
flate2 = "1.0"
tar = "0.4"

[features]
default = []

# A feature for disabling the build script to prevent issues with `docs.rs`.
disable-sys-build-script = []
# A feature for generating bindings.
generate-bindings = ["bindgen"]

[package.metadata.docs.rs]
# Disable the build.rs on https://docs.rs since it can cause
# issue there and it's not needed.
features = ["disable-sys-build-script"]
