[package]
authors = ["Andrey Volkov <andrew.wolf.alex@gmail.com>"]
edition = "2021"
name = "onnxruntime"
version = "0.0.5"

description = "Wrapper around Microsoft's ONNX Runtime"
homepage = "https://github.com/infertech/onnxruntime-rs"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/infertech/onnxruntime-rs"

[[test]]
name = "integration_tests"
required-features = ["model-fetching"]

[dependencies]
onnxruntime-sys = { path = "../onnxruntime-sys" }

lazy_static = "1.4"
ndarray = "0.15"
thiserror = "1.0"
tracing = "0.1"

# Enabled with 'model-fetching' feature
ureq = { version = "2.1", optional = true }

[dev-dependencies]
image = "0.23"
test-env-log = { version = "0.2", default-features = false, features = [
  "trace",
] }
tracing-subscriber = "0.2"
ureq = "2.1"

[features]
# Fetch model from ONNX Model Zoo (https://github.com/onnx/models)
model-fetching = ["ureq"]
# Disable build script; used for https://docs.rs
disable-sys-build-script = ["onnxruntime-sys/disable-sys-build-script"]
generate-bindings = ["onnxruntime-sys/generate-bindings"]

[package.metadata.docs.rs]
features = ["disable-sys-build-script", "model-fetching"]
